# last-in-championship

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  config.py  docker-compose.dev.yml  docker-compose.yml  main.py  main_old.py  main_old.py.unused  metrics.py  metrics_old.py  requirements.txt  run_dev.py  wsgi.py
app/: __init__.py  app.py  blueprints.py  caching.py  chatbot.py  config.py  data.py  database.py  game.py  helpers.py  metrics.py  migrations.py  models.py  routes.py  sockets.py  streaks.py  tie_breakers.py  utils.py  visualisation.py
app/migrations/: 20240124_add_monitoring_date.py  __init__.py  add_user_streaks.py  run_migrations.py
app/templates/: audit.html  base.html  day_rankings.html  error.html  history.html  index.html  login.html  maintenance.html  (+6 more)
backend/: main.py
cli/: Cargo.toml  Dockerfile.builder  build-loop.sh  example.config.toml
cli/.cargo/: config.toml
cli/src/: api.rs  config.rs  main.rs  models.rs  ui.rs
cli/src/commands/: config.rs  log.rs  login.rs  mod.rs  query.rs  rankings.rs  stats.rs  streaks.rs
frontend/: package.json
migrations/: 20240124_add_monitoring_date.py  add_streaks.py  run_migrations.py
monitoring/: Dockerfile  docker-entrypoint.sh  index.js  package.json  schema.sql
nginx/: nginx.conf  proxy.conf
sql/: init.sql
templates/: audit.html  base.html  day_rankings.html  error.html  history.html  index.html  login.html  maintenance.html  missing_entries.html  rankings.html  register.html  settings.html  tie_breakers.html  visualisations.html  visualizations.html
tests/: conftest.py  test_app.py
(+9 files in other folders)
