[package]
name = "lic-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7.0"
dialoguer = "0.10"
indicatif = "0.17"
config = "0.13"
toml = "0.7"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
