[package]
name = "lic-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json", "cookies"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
clap = { version = "4.5.27", features = ["derive"] }
colored = "3.0.0"
chrono = { version = "0.4.39", features = ["serde"] }
comfy-table = "7.1.3"
dialoguer = "0.11.0"
indicatif = "0.17.9"
config = "0.15.6"
toml = "0.8.19"
anyhow = "1.0.95"
thiserror = "2.0.11"
dirs = "6.0.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
